Integrated socketio and mongoose into app to store data. Only works for one user in current state

--- a/views/root.jade
+++ b/views/root.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
     #page
-        h1 tic tac toe
+        //- h1 tic tac toe
         #board
         .clearfix
         #info
