--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,8 @@ doctype html
 html
     head
         title= title
-        link(rel='stylesheet', href='/build/build.css')
+        link(rel='stylesheet', href='/public/build/build.css')
     body
         block content
 
-    script(src="/build/build.js")
+    script(src="/public/build/build.js")
