--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -133,7 +133,7 @@ h1 {
 
 #message {
     color: #000;
-    background-color: #FFF;
+    background-color: rgba(255,255,255,0.9);
     border-radius: 16px;
     padding: 8px 18px;
     font-weight: 200;
