--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -1,3 +1,7 @@
+$orange: #FF8822;
+$green: #21D330;
+$gray: #555555;
+
 body {
     min-width: 600px;
     margin: 0;
@@ -15,19 +19,21 @@ h1 {
     font-weight: 800;
     margin: 0;
     line-height: 2em;
-    color: #555;
+    color: $gray;
+}
+
+.left {
+    float: left;
+}
+
+.right {
+    float: right;
 }
 
 #page {
     width: 100%;
     height: 100%;
     text-align: center;
-}
-
-#board {
-    display: inline-block;
-    vertical-align: bottom;
-    margin-bottom: 12px;
 }
 
 .tile {
@@ -38,46 +44,53 @@ h1 {
     background-color: #FFF;
     margin: 10px;
     cursor: pointer;
-    border-radius: 1000px;
+    border-radius: 100%;
+
+    &.faux {
+        width: 45px;
+        height: 45px;
+        cursor: default;
+    }
+
+    &:hover {
+        border-color: $gray;
+    }
+
+    &.one {
+        background-color: $green;
+    }
+
+    &.two { 
+        background-color: $orange;
+    }
 }
 
-.tile.one {
-    background-color: #21D330;
+#board-wrapper {
+    &.one {
+        .tile:not(.one):not(.two):not(.faux):hover {
+            border-color: $green;
+        }
+
+        .player.one .tile.faux {
+            background-color: $green;
+        }
+    }
+
+    &.two {
+        .tile:not(.one):not(.two):not(.faux):hover {
+            border-color: $orange;
+        }
+
+        .player.two .tile.faux {
+            background-color: $orange;
+        }
+    }
 }
 
-.tile.two { 
-    background-color: #FF8822;
-}
-
-.tile.faux {
-    width: 45px;
-    height: 45px;
-}
-
-.tile.faux {
-    width: 45px;
-    height: 45px;
-}
-
-.tile:hover {
-    border-color: #555;
-}
-
-#board.one .tile:hover {
-    border-color: #21D330;
-}
-
-#board.two .tile:hover {
-    border-color: #FF8822;
-}
-
-#board .tile.one:hover,
-#board .tile.two:hover {
-    border-color: #555;
-}
-
-.tile.faux:hover {
-    cursor: default;
+#board {
+    display: inline-block;
+    vertical-align: bottom;
+    margin-bottom: 12px;
 }
 
 .nth-tile {
@@ -96,23 +109,15 @@ h1 {
 .player {
     display: inline-block;
     text-align: center;
-}
 
-.player .name {
-    line-height: 80px;
-    float: left;
-    display: inline-block;
-    margin-left: 10px;
-    color: #555;
-    font-weight: 800;
-}
-
-.player.one {
-    float: left;
-}
-
-.player.two {
-    float: right;
+    .name {
+        line-height: 80px;
+        float: left;
+        display: inline-block;
+        margin-left: 10px;
+        color: $gray;
+        font-weight: 800;
+    }
 }
 
 #overlay-bg {
@@ -125,10 +130,10 @@ h1 {
     z-index: 1;
     display: none;
     cursor: pointer;
-}
 
-#overlay-bg.show {
-    display: inline-block;
+    &.show {
+        display: inline-block;
+    }
 }
 
 #message {
@@ -180,8 +185,8 @@ h1 {
 }
 
 .new-game:hover * {
-    color: #555;
-    border-color: #555;
+    color: $gray;
+    border-color: $gray;
 }
 
 .clearfix {
