--- a/views/root.jade
+++ b/views/root.jade
@@ -3,19 +3,20 @@ extends layout
 block content
     #page
         h1 tic tac toe
-        #board
-        .clearfix
-        #info
-            .player.one
-                .tile.faux
-                .name player one
-            .player.two
-                .tile.faux
-                .name player two
-            .player.new-game
-                .button.tile.faux
-                    div !
-                .name new game
+        #board-wrapper
+            #board
+            .clearfix
+            #info
+                .player.one.left
+                    .tile.faux
+                    .name player one
+                .player.two.right
+                    .tile.faux
+                    .name player two
+                .player.new-game
+                    .button.tile.faux
+                        div !
+                    .name new game
         #overlay-bg
         #message
             .title
