Changed `root` layout to `game` and changed game route accordingly

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html
     head
         title= title
         link(rel='stylesheet', href='/public/build/build.css')
-    body
+    body.text-center
         block content
 
     script(src="/public/build/build.js")
