--- a/views/game.jade
+++ b/views/game.jade
@@ -1,11 +1,11 @@
 extends layout
 
 block content
-    h1 tic tac toe
+    div.spacer-md
     #board-wrapper
         #board
-        .clearfix
-        #info
+        .spacer-xs
+        #info.text-sm
             .player.one.left
                 .tile.faux
                 .name player one
