--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,10 @@ html
         title= title
         link(rel='stylesheet', href='/public/build/build.css')
     body.text-center
+        div
+            .spacer-md
+            .spacer-sm
+        h1.text-lg.text-bold tic tac toe
         block content
 
     script(src="/public/build/build.js")
