Styling changes for index

--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -22,10 +22,9 @@ body {
     width: 400px;
     left: 50%;
     margin-left: -200px;
-    top: 50%;
-    margin-top: -250px;
+    top: 150px;
     z-index: -1;
-    opacity: 0.15;
+    opacity: 0.1;
 }
 
 .left {
