--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    div.spacer-lg
+    div.spacer-xl
 
     img.bg-image(src="public/images/screenshot.png")
 
@@ -11,7 +11,7 @@ block content
                 div !
             .name play!
 
-        .spacer-md
+        .spacer-sm
 
         h3.text-sm to play with a friend:
         div.spacer-sm
@@ -24,9 +24,10 @@ block content
             div.spacer-sm
             li 4. have fun!
 
-        .spacer-md
+        .spacer-xl
+        .spacer-xl
 
-        .player.new-game
+        a.player.new-game(href="https://github.com/whroman/tictactoe-node")
             .button.tile.faux
                 div /
             .name source code!
