--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -128,9 +128,18 @@ body {
         line-height: 80px;
         float: left;
         display: inline-block;
-        margin-left: 10px;
+        margin: 0 10px;
         color: $gray-dark;
         font-weight: 800;
+        overflow: visible;
+
+        input {
+            border-width: 0 0.7em;
+            border-style: solid;
+            border-color: transparent;
+            line-height: 2em;
+            box-sizing: border-box;
+        }
     }
 }
 
