Moved socket events into own modules

--- a/views/game.jade
+++ b/views/game.jade
@@ -9,11 +9,11 @@ block content
             .player.one
                 .tile.faux
                 .name.text-bold
-                    input(type="text", maxlength="15", size="10", value="player one")
+                    input(type="text", for="playerOne", maxlength="15", size="10", value="player one")
             .player.two
                 .tile.faux
                 .name.text-bold
-                    input(type="text", maxlength="15", size="10", value="player two")
+                    input(type="text", for="playerTwo", maxlength="15", size="10", value="player two")
 
             div
 
