Removed all direct references to instantiated modules within backbone models, collections and views

--- a/views/specRunner.jade
+++ b/views/specRunner.jade
@@ -2,7 +2,7 @@ doctype html
 html
   head
     meta(http-equiv="Content-Type", content="text/html; charset=UTF-8")
-    title MHBO Spec Runner - Jasmine v2.0.1
+    title Spec Runner - Jasmine v2.0.1
     link(rel="stylesheet", type="text/css", href="/public/bower_components/jasmine/lib/jasmine-core/jasmine.css")
     //- jasmine
     script(type="text/javascript", src="/public/bower_components/jasmine/lib/jasmine-core/jasmine.js")
